--- a/.gitignore
+++ b/.gitignore
@@ -28,5 +28,14 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
+# The .env file is used for both dev and test
+# and creates more problems than it solves
+.env
+
+# .env.*.local files are where we put actual
+# secrets we need for dev and test, so
+# we really don't want them in version control
+.env.*.local
+
 # Procfile.dev is generated, so should not be checked in
 Procfile.dev
