--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,3 @@
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/widgets_test
 SIDEKIQ_REDIS_URL=redis://localhost:6379/2
+JWT_SECRET_KEY=define_in_your_local_file
